last.log
[[33mWarning [0m] Parallelism is disabled.
[[31m Error  [0m] Automaton.scala:108:16: error: missing parameter type for expanded function ((x$2) => x$2.subsetOf(validStates))
             } ensuring { _ subsetOf validStates }
                          [31m^[0m
[[31m Error  [0m] Automaton.scala:120:33: error: overloaded method value move with alternatives:
[[31m Error  [0m]   (states: set.Set[State],w: stainless.lang.Option[Sym])set.Set[State] <and>
[[31m Error  [0m]   => (State, stainless.lang.Option[Sym]) => set.Set[State]
[[31m Error  [0m]  cannot be applied to (set.Set[State], stainless.lang.None[Nothing])
               val newStates: Set[State] = move(states, None())
                                           [31m^[0m
[[34m  Info  [0m] Cycle took 3883 ms
[[34m  Info  [0m] Shutting down executor service.
